# studyportal-utils

./: .gitignore  README.md  crawl.py  credentials.json  filesync.py  fileunsync.py  init.py  pyproject.toml  setup.py  starter.py  structure.json  sync.py  token.pickle
resources/: courses.json  departments.json
studyportal/: cmd.py  init.py
studyportal/scripts/: load.py  permissions.py  setup.py  sync.py
